--- a/springboot01_demo/src/main/resources/custom.properties
+++ b/springboot01_demo/src/main/resources/custom.properties
@@ -1,2 +1,8 @@
 custom.id=1
 custom.name=customName
+# ?????
+custom.secret: ${random.value}
+# ??long???
+custom.bignumber: ${random.long}
+# ??uuid
+custom.uuid: ${random.uuid}
