--- a/apache/calcite/pom.xml
+++ b/apache/calcite/pom.xml
@@ -20,12 +20,36 @@
             <version>1.35.0</version>
         </dependency>
 
-
         <dependency>
             <groupId>org.apache.calcite</groupId>
             <artifactId>calcite-example-csv</artifactId>
             <version>1.21.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.calcite</groupId>
+            <artifactId>calcite-innodb</artifactId>
+            <version>1.35.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.calcite</groupId>
+            <artifactId>calcite-mongodb</artifactId>
+            <version>1.35.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.10.2</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.49</version>
+        </dependency>
+
 
         <dependency>
             <groupId>com.alibaba.fastjson2</groupId>
